# TCM

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  openocd.cfg
Src/: CMakeLists.txt  config.h  interrupts.c  main.c  setup.c  setup.h  tasks_config.h
Src/Config/: Limits.c  memory.c  memory.h
Src/IO/: Control.c  Control.h  LED.c  LED.h  Sticks.c  Sticks.h  controls.c  controls.h  thrusters.c  thrusters.h
Src/Memory/: memory_config.h
Src/Sensors/: analog_sensors.c  analog_sensors.h
Src/Sensors/BNO080/: app.c  app.h  bno080.c  bno080.h  hw.h  sh2.h
Src/Sensors/MS5837-30BA/: depth_sensor.c
Src/Sensors/UM7/: UM7.c  UM7.h
Src/Variables/: variables.h
Src/communication/: CommunicationHandler.c  rx_handler.c  tx_handler.c  tx_handler.h
Src/drivers/: GPIO.h  I2C2.c  SPI1.h  SPI3.c  USART.c  USART.h  USART1.c  USART1.h  USART2.c  USART2.h  USART3.c  USART3.h
Src/drivers/SST25_flash/: SST25_flash.c  SST25_flash.h  SST25_platform.c
Src/flight/: ControlLoop.c  ControlLoop.h  IMU.c  IMU.h  PID.c  PID.h
Src/helpers/: PID.h  common.c  common.h  comunication_protocol.c  comunication_protocol.h  quaternions.c
Src/helpers/CommunicationProtocol/: communication_protocol.c  communication_protocol.h
Src/operation/: Automations.c  CommunicationHandler.c  CommunicationHandler.h  ControlLoop.c  ControlLoop.h  DirectThrustersCtrl.c  DirectThrustersCtrl.h  IMU.c  IMU.h  ServiceMode.c  ServiceMode.h  systemControl.c  systemControl.h
Src/scheduler/: scheduler.c  scheduler.h
Src/tasks/: HeartBeat.c  HeartBeat.h  task_ReadAnalogSensors.c  task_Telemetry.c  tasks.c  tasks.h
Src/telemetry/: telemetry_debug.c  telemetry_debug.h
Src/time/: time.c
TMC/: CMakeLists.txt  interrupts.c  main.c  setup.c  setup.h
TMC/Common/: PID.c  PID.h  quaternions.c
TMC/Config/: Limits.c  Limits.h  config.c  config.h  config_tasks.h  default_config.h
TMC/Flash/: flash.c  flash.h
TMC/IO/: LED.c  Sticks.c  Sticks.h  actuators.c  actuators.h
TMC/Memory/: memory.c
TMC/Sensors/: analog_sensors.c
TMC/Sensors/BNO080/: bno080.c
TMC/Sensors/MS5837-30BA/: depth_sensor.h
TMC/Sensors/UM7/: UM7.c  UM7.h  UM7_registers.h
TMC/Variables/: register_variables.c  variables.c  variables.h
TMC/communication/: CommunicationHandler.c  CommunicationHandler.h  protocol.c  protocol.h  protocol_data_types.h  rx_handler.h  tx_handler.c  tx_handler.h
TMC/drivers/: GPIO.c  I2C2.h  SPI1.c  SPI2.c  SPI2.h  USART.c  USART1.c  USART1.h  USART2.c  USART3.h
TMC/drivers/SST25_flash/: SST25_flash.h  SST25_platform.h
TMC/helpers/: PID.c  quaternions.c  quaternions.h
TMC/operation/: Automations.c  Automations.h  ControlLoop.c  ControlLoop.h  DirectThrustersCtrl.c  IMU.h  ServiceMode.c  ServiceMode.h
TMC/scheduler/: scheduler.h
TMC/tasks/: HeartBeat.c  task_Telemetry.c  tasks.c
cmake/: arm-gcc-m4-toolchain.cmake  st-project.cmake
